--- a/INDEX.html
+++ b/INDEX.html
@@ -4,7 +4,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--The viewport meta tag is used to improve the presentation and behavior of the samples 
-      on iOS devices--!>
+      on iOS devices-->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
     <title>CSULB CITY OF LONG BEACH</title>
 	
